--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@ title: PEREZRE
   <ul class="nav nav-tabs nav-justified flex flex-col md:flex-row flex-wrap list-none border-b-0 pl-0" id="tabs-tabJustify" role="tablist">
     
   <li class="nav-item flex-grow text-center" role="presentation">
-    <a href="" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link">Home</a>
+    <a href="#" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link">Home</a>
   </li>
 
   <li class="nav-item flex-grow text-center" role="presentation">
@@ -946,7 +946,7 @@ title: PEREZRE
           <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/bg.svg" alt="demo" width="1920" height="1080">
 
             <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Konzept einer Cloudlösung <a class="text-gray-400">(TBA)</a></h2>
+                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Konzept einer Cloudlösung <span class="text-gray-400">(TBA)</span></h2>
               <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist die Konzeption einer Cloudlösung zur Analyse von Daten für eine präventive Wartung in der Automobilbranche.</p>
             </div>
         </div>
@@ -955,7 +955,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/BEPRO.svg" alt="Bachelor Projektarbeit" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Pressenvermessungtool <a class="text-gray-400">(2.0)</a></h2>
+                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Pressenvermessungtool <span class="text-gray-400">(2.0)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist die Entwicklung von einem Softwarevergleichstool für die Pressenvermessung zur Analyse von Genauigkeitskennwerten.</p>
               </div>
           </div>
@@ -964,7 +964,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SYS40.svg" alt="Systemdynamik" width="1920" height="1080">
 
               <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Zwei Behälter ohne Interaktion <a class="text-gray-400">(1.7)</a></h2>
+                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Zwei Behälter ohne Interaktion <span class="text-gray-400">(1.7)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist es zwei Flüssigkeitsbehälter ohne Interaktion als mathematisches Modell in MatLab zu modellieren und diese zu vergleichen. </p>            
               </div>
           </div>
@@ -973,7 +973,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB02.svg" alt="Machinelles Sehen" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bildbearbeitung und -korrektur <a class="text-gray-400">(1.0)</a></h2>
+                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bildbearbeitung und -korrektur <span class="text-gray-400">(1.0)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist es gegebene Bilder mithilfe von Matlab zu manipulieren bzw. korrigieren. Mit Fokus auf Verarbeitung, Auswertung und Kompression.</p>
               </div>
           </div>
@@ -982,7 +982,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB03.svg" alt="Robotik" width="1920" height="1080">
 
               <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bauweise von Robotern<a class="text-gray-400">(1.3)</a></h2>
+                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bauweise von Robotern <span class="text-gray-400">(1.3)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist es den Unterschied der Bauweise von zwei  Industrieroboter auf deren Eigenschaften unter gegebenen Aspekten zu untersuchen.</p>            
               </div>
           </div>
@@ -991,7 +991,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/FTE60.svg" alt="NC-Programmierung" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">NC-Programmierung <a class="text-gray-400">(1.7)</a></h2>
+                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">NC-Programmierung <span class="text-gray-400">(1.7)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist die CNC-Programmierung von Fräsmaschinen und die Roboterprogrammierung eines Industrieroboter in einer Roboterzelle.</p>
               </div>
           </div>
@@ -1000,7 +1000,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/PAB40.svg" alt="Projektarbeit" width="1920" height="1080">
 
               <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Machine Learning<a class="text-gray-400">(1.3)</a></h2>
+                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Machine Learning <span class="text-gray-400">(1.3)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist es als Team mit PM-Methoden einen Algorithmus zur Identifikation von Ziffern unter Verwendung von Python zu entwickeln.</p>            
               </div>
           </div>
@@ -1009,7 +1009,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SWE22.svg" alt="Softwareentwicklung" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Softwareentwicklung <a class="text-gray-400">(1.7)</a></h2>
+                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Softwareentwicklung <span class="text-gray-400">(1.7)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist es ein Petri-Netz-Simulator zu entwickeln und zu implementieren. Mit Fokus auf GUI, Simulator und graphische Auswertung.</p>
               </div>
           </div>
@@ -1018,7 +1018,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/MCS40.svg" alt="Microcomputer-Systeme" width="1920" height="1080">
 
               <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Wetterstation mit DHT11 Sensor <a class="text-gray-400">(1.7)</a></h2>
+                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Wetterstation mit DHT11 Sensor <span class="text-gray-400">(1.7)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist es mit dem Raspberry und einem DHT11 Sensor eine IoT Wetterstation zu entwickeln und in Echtzeit auf beliebigen Geräten abzurufen. </p>            
               </div>
           </div>
@@ -1027,7 +1027,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT21.svg" alt="Mechatronische Wandler" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Piezo-Sensoren <a class="text-gray-400">(2.3)</a></h2>
+                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Piezo-Sensoren <span class="text-gray-400">(2.3)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit es es die Anwendung von Piezo-Sensoren in der Prozessmesstechnik zu untersuchen und Unterschiede festzustellen.</p>
               </div>
           </div>
@@ -1036,7 +1036,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG23.svg" alt="Steuerungtechnik" width="1920" height="1080">
 
               <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Steuerung von Bohreinrichtung <a class="text-gray-400">(1.3)</a></h2>
+                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Steuerung von Bohreinrichtung <span class="text-gray-400">(1.3)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist die Steuerung für das Spannen und Bohren von Werkstücken mit SPS zu entwickeln und in CoDeSys zu simulieren.</p>            
               </div>
           </div>
@@ -1045,7 +1045,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG02.svg" alt="Regelungstechnik" width="1920" height="1080">
 
               <div class="mt-2"> 
-                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Regelungstechnik <a class="text-gray-400">(1.0)</a></h2>
+                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Regelungstechnik <span class="text-gray-400">(1.0)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist es eine Einführung in Simulink, anhand vorgegebener Aufgaben zu erarbeiten. Z.B. die Parametrierung und Simulation eines MFDS. </p>
               </div>
           </div>
@@ -1054,7 +1054,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT20.svg" alt="Messtechnik" width="1920" height="1080">
 
               <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Messtechnik <a class="text-gray-400">(2.7)</a></h2>
+                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Messtechnik <span class="text-gray-400">(2.7)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist es verschiedene Messungen mit Multimeter, Oszilloskop zu untersuchen. Es folgt die Modellierung und Simulation von Anwendungen in LabVIEW. </p>            
               </div>
           </div>
@@ -1063,7 +1063,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/KON24.svg" alt="Produktentwicklungsprozess" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Produktentwicklungsprozess <a class="text-gray-400">(1.0)</a></h2>
+                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Produktentwicklungsprozess <span class="text-gray-400">(1.0)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist ein technischer Bericht zur Herstellung von Kosmetikprodukten und die Konstruktion einer Abfülleinrichtung nach VDI 2221.</p>
               </div>
           </div>
@@ -1072,7 +1072,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/WST20.svg" alt="Werkstoffkunde" width="1920" height="1080">
 
               <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Werkstoffkunde <a class="text-gray-400">(3.0)</a></h2>
+                <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Werkstoffkunde <span class="text-gray-400">(3.0)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist es Versuche der mechanischen Werkstoffprüfung, Metallographie und Kunststoffe zu analysieren und auszuwerten. </p>            
               </div>
           </div>
@@ -1081,7 +1081,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SQF21.svg" alt="Schlüsselqualifikation" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Schlüsselqualifikation <a class="text-gray-400">(1.0)</a></h2>
+                  <h2 class="text-lg font-bold text-gray-700 dark:text-gray-200">Schlüsselqualifikation <span class="text-gray-400">(1.0)</span></h2>
                 <p class="text-gray-500 dark:text-gray-400">Das Ziel der Arbeit ist es ein technisches System weiterzuentwickeln, mit dem Fokus auf die Aspekte die für den Studiengang Mechatronik relevant sind.</p>
               </div>
           </div>
