--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@ title: PEREZRE
               <h2 class="text-3xl font-bold text-gray-800 dark:text-gray-100">Who I am</h2>
 
               <p class="mt-4 text-gray-500 dark:text-gray-400 lg:max-w-md">
-                  Hi, I am Rebeca, currently finishing my career on mechatronics engineering. I have a high affinity on IT and strive to stay flexible with focus on cloud engineering and security. How technical things work has always been my motivation to dive deeper. It started with rooting my phone to use custom ROMs. From there I continued with embedded systems and later with programming and DevOps tools. 
+                  Hi, I am Rebeca, currently finishing my career on mechatronics engineering. I have a high affinity on IT and strive to stay flexible with focus on cloud engineering and security. How technical things work has always been my motivation to dive deeper. It started with rooting my phone to flash custom ROMs. From there I continued with Embedded Systems and into Full Stack development and DevOps tools. 
               </p>
               <a href="mailto:contact@perezre.de">
               <button class="inline-flex items-center px-4 py-2 mt-4 text-xs font-medium text-white uppercase transition-colors duration-200 bg-blue-600 rounded-md lg:w-auto hover:bg-blue-500 focus:outline-none focus:bg-blue-500">
