--- a/src/index.html
+++ b/src/index.html
@@ -876,7 +876,7 @@ title: PEREZRE
 
               <div class="mt-2">
                   <h2 class="text-lg font-medium text-black dark:text-white">Nextcloud</h2> <h3 class="text-base font-normal text-black dark:text-white"> Setup and Configuration</h3>
-                  <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-500">
+                  <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-500 dark:text-gray-400">
                     <li>Network configuration - VPN</li>
                     <li>Security - Hardware hardening</li>
                     <li>Backup automation routine</li>
@@ -889,7 +889,7 @@ title: PEREZRE
 
               <div class="mt-2">
                   <h2 class="text-lg font-medium text-black dark:text-white">Homepage</h2> <h3 class="text-base font-normal text-black dark:text-white"> Upgrade and Redesign</h3>
-                  <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-500">
+                  <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-500 dark:text-gray-400">
                     <li>From Hugo framework to 11ty</li>
                     <li>First touch with TailwindCSS</li>
                     <li>Keep Backend smooth</li>
@@ -902,7 +902,7 @@ title: PEREZRE
 
               <div class="mt-2">
                   <h2 class="text-lg font-medium text-black dark:text-white">Cloud Computing </h2> <h3 class="text-base font-normal text-black dark:text-white"> Learning Paths </h3> 
-                  <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-500">
+                  <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-500 dark:text-gray-400">
                     <li>Amazon Web Services</li>
                     <li>Azure Cloud</li>
                     <li>Google Cloud</li>
@@ -915,7 +915,7 @@ title: PEREZRE
 
               <div class="mt-2">
                   <h2 class="text-lg font-medium text-black dark:text-white">Cybersecurity </h2> <h3 class="text-base font-normal text-black dark:text-white"> Hands-on</h3>
-                  <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-500">
+                  <ul role="list" class="marker:text-sky-400 list-disc pl-5 space-y-1 text-gray-500 dark:text-gray-400">
                     <li>Bug Bounty Hunter</li>
                     <li>Penetration Tester</li>
                     <li>To be continued</li>
@@ -942,10 +942,10 @@ title: PEREZRE
       <div class="grid gap-x-10 gap-y-8 mt-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
 
         <div class="w-full max-w-xs text-left">
-          <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/bg.svg" alt="demo" width="1920" height="1080">
+          <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/bg.svg" alt="BA" width="1920" height="1080">
 
             <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Konzept einer Cloudlösung <span class="text-gray-700">(TBA)</span></h2>
+                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Konzept einer Cloudlösung <span class="text-gray-700 dark:text-gray-400">(TBA)</span></h2>
               <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist die Konzeption einer Cloudlösung zur Analyse von Daten für eine präventive Wartung in der Automobilbranche.</p>
             </div>
         </div>
@@ -954,7 +954,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/BEPRO.svg" alt="Bachelor Projektarbeit" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Pressenvermessungtool <span class="text-gray-700">(2.0)</span></h2>
+                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Pressenvermessungtool <span class="text-gray-700 dark:text-gray-400">(2.0)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist die Entwicklung von einem Softwarevergleichstool für die Pressenvermessung zur Analyse von Genauigkeitskennwerten.</p>
               </div>
           </div>
@@ -963,7 +963,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SYS40.svg" alt="Systemdynamik" width="1920" height="1080">
 
               <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Zwei Behälter ohne Interaktion <span class="text-gray-700">(1.7)</span></h2>
+                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Zwei Behälter ohne Interaktion <span class="text-gray-700 dark:text-gray-400">(1.7)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist es zwei Flüssigkeitsbehälter ohne Interaktion als mathematisches Modell in MatLab zu modellieren und diese zu vergleichen. </p>            
               </div>
           </div>
@@ -972,7 +972,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB02.svg" alt="Machinelles Sehen" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Bildbearbeitung und -korrektur <span class="text-gray-700">(1.0)</span></h2>
+                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Bildbearbeitung und -korrektur <span class="text-gray-700 dark:text-gray-400">(1.0)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist es gegebene Bilder mithilfe von Matlab zu manipulieren bzw. korrigieren. Mit Fokus auf Verarbeitung, Auswertung und Kompression.</p>
               </div>
           </div>
@@ -981,7 +981,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB03.svg" alt="Robotik" width="1920" height="1080">
 
               <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Bauweise von Robotern <span class="text-gray-700">(1.3)</span></h2>
+                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Bauweise von Robotern <span class="text-gray-700 dark:text-gray-400">(1.3)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist es den Unterschied der Bauweise von zwei  Industrieroboter auf deren Eigenschaften unter gegebenen Aspekten zu untersuchen.</p>            
               </div>
           </div>
@@ -990,7 +990,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/FTE60.svg" alt="NC-Programmierung" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">NC-Programmierung <span class="text-gray-700">(1.7)</span></h2>
+                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">NC-Programmierung <span class="text-gray-700 dark:text-gray-400">(1.7)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist die CNC-Programmierung von Fräsmaschinen und die Roboterprogrammierung eines Industrieroboter in einer Roboterzelle.</p>
               </div>
           </div>
@@ -999,7 +999,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/PAB40.svg" alt="Projektarbeit" width="1920" height="1080">
 
               <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Machine Learning <span class="text-gray-700">(1.3)</span></h2>
+                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Machine Learning <span class="text-gray-700 dark:text-gray-400">(1.3)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist es als Team mit PM-Methoden einen Algorithmus zur Identifikation von Ziffern unter Verwendung von Python zu entwickeln.</p>            
               </div>
           </div>
@@ -1008,7 +1008,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SWE22.svg" alt="Softwareentwicklung" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Softwareentwicklung <span class="text-gray-700">(1.7)</span></h2>
+                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Softwareentwicklung <span class="text-gray-700 dark:text-gray-400">(1.7)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist es ein Petri-Netz-Simulator zu entwickeln und zu implementieren. Mit Fokus auf GUI, Simulator und graphische Auswertung.</p>
               </div>
           </div>
@@ -1017,7 +1017,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/MCS40.svg" alt="Microcomputer-Systeme" width="1920" height="1080">
 
               <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Wetterstation mit DHT11 Sensor <span class="text-gray-700">(1.7)</span></h2>
+                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Wetterstation mit DHT11 Sensor <span class="text-gray-700 dark:text-gray-400">(1.7)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist es mit dem Raspberry und einem DHT11 Sensor eine IoT Wetterstation zu entwickeln und in Echtzeit auf beliebigen Geräten abzurufen. </p>            
               </div>
           </div>
@@ -1026,7 +1026,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT21.svg" alt="Mechatronische Wandler" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Piezo-Sensoren <span class="text-gray-700">(2.3)</span></h2>
+                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Piezo-Sensoren <span class="text-gray-700 dark:text-gray-400">(2.3)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit es es die Anwendung von Piezo-Sensoren in der Prozessmesstechnik zu untersuchen und Unterschiede festzustellen.</p>
               </div>
           </div>
@@ -1035,7 +1035,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG23.svg" alt="Steuerungtechnik" width="1920" height="1080">
 
               <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Steuerung von Bohreinrichtung <span class="text-gray-700">(1.3)</span></h2>
+                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Steuerung von Bohreinrichtung <span class="text-gray-700 dark:text-gray-400">(1.3)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist die Steuerung für das Spannen und Bohren von Werkstücken mit SPS zu entwickeln und in CoDeSys zu simulieren.</p>            
               </div>
           </div>
@@ -1044,7 +1044,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG02.svg" alt="Regelungstechnik" width="1920" height="1080">
 
               <div class="mt-2"> 
-                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Regelungstechnik <span class="text-gray-700">(1.0)</span></h2>
+                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Regelungstechnik <span class="text-gray-700 dark:text-gray-400">(1.0)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist es eine Einführung in Simulink, anhand vorgegebener Aufgaben zu erarbeiten. Z.B. die Parametrierung und Simulation eines MFDS. </p>
               </div>
           </div>
@@ -1053,7 +1053,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT20.svg" alt="Messtechnik" width="1920" height="1080">
 
               <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Messtechnik <span class="text-gray-700">(2.7)</span></h2>
+                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Messtechnik <span class="text-gray-700 dark:text-gray-400">(2.7)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist es verschiedene Messungen mit Multimeter, Oszilloskop zu untersuchen. Es folgt die Modellierung und Simulation von Anwendungen in LabVIEW. </p>            
               </div>
           </div>
@@ -1062,7 +1062,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/KON24.svg" alt="Produktentwicklungsprozess" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Produktentwicklungsprozess <span class="text-gray-700">(1.0)</span></h2>
+                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Produktentwicklungsprozess <span class="text-gray-700 dark:text-gray-400">(1.0)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist ein technischer Bericht zur Herstellung von Kosmetikprodukten und die Konstruktion einer Abfülleinrichtung nach VDI 2221.</p>
               </div>
           </div>
@@ -1071,7 +1071,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/WST20.svg" alt="Werkstoffkunde" width="1920" height="1080">
 
               <div class="mt-2">
-                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Werkstoffkunde <span class="text-gray-700">(3.0)</span></h2>
+                <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Werkstoffkunde <span class="text-gray-700 dark:text-gray-400">(3.0)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist es Versuche der mechanischen Werkstoffprüfung, Metallographie und Kunststoffe zu analysieren und auszuwerten. </p>            
               </div>
           </div>
@@ -1080,7 +1080,7 @@ title: PEREZRE
             <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SQF21.svg" alt="Schlüsselqualifikation" width="1920" height="1080">
 
               <div class="mt-2">
-                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Schlüsselqualifikation <span class="text-gray-700">(1.0)</span></h2>
+                  <h2 class="text-lg font-bold text-gray-800 dark:text-gray-200">Schlüsselqualifikation <span class="text-gray-700 dark:text-gray-400">(1.0)</span></h2>
                 <p class="text-gray-700 dark:text-gray-400">Das Ziel der Arbeit ist es ein technisches System weiterzuentwickeln, mit dem Fokus auf die Aspekte die für den Studiengang Mechatronik relevant sind.</p>
               </div>
           </div>
